Fixed zh_HK alignment of promo box splited 50/50

--- a/src/main/webapp/public/n/themes/deals/css/hc.css
+++ b/src/main/webapp/public/n/themes/deals/css/hc.css
@@ -1206,6 +1206,7 @@ select {
     padding-top:24px;
     padding-bottom:24px;
     float:left;
+	width:100%;
 }
 .hero-text a {
     text-decoration:underline;
